corrected to verse 21

--- a/chalisa6.html
+++ b/chalisa6.html
@@ -490,11 +490,11 @@
         ]
     },
 
-    // checked to here, next should be 11
+
 
     {
         type: "Chaupai",
-        verseIndex: 10,
+        verseIndex: 11,
         fullTransliteration: "Lāya sajīvana lakhana jiyāye | Śrī raghubīra harashi ura lāye ||",
         fullTranslation: "You brought the Sanjivani herb and revived Lakshmana; Sri Rama embraced you with joy.",
         words: [
@@ -502,6 +502,8 @@
             { text: "सजीवन", transliteration: "sajīvana", translation: "Life-giving herb", hindi: "संजीवनी बूटी", etym: "San (With) + Jiva (Life).", note: "The herb that restores life." },
             { text: "लखन", transliteration: "lakhana", translation: "Lakshmana", hindi: "लक्ष्मण", etym: "-", note: "-" },
             { text: "जियाये", transliteration: "jiyāye", translation: "Revived", hindi: "जीवित किया", etym: "Jiva (Life).", note: "Saved from the Shakti weapon." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "श्री", transliteration: "Śrī", translation: "Lord/Glorious", hindi: "श्री", etym: "Honorific prefix.", note: "-" },
             { text: "रघुबीर", transliteration: "raghubīra", translation: "Hero of Raghus", hindi: "रघुवीर (राम)", etym: "Raghu (Clan) + Vira (Hero).", note: "Rama." },
             { text: "हरषि", transliteration: "harashi", translation: "Joyfully", hindi: "हर्षित होकर", etym: "Skt: Harsha (Joy).", note: "With great happiness." },
@@ -511,7 +513,7 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 11,
+        verseIndex: 12,
         fullTransliteration: "Raghupati kīnhī bahuta barāī | Tuma mama priya bharatahi sama bhāī ||",
         fullTranslation: "Raghupati (Rama) praised you greatly, saying 'You are as dear to me as my brother Bharata'.",
         words: [
@@ -519,6 +521,8 @@
             { text: "कीन्ही", transliteration: "kīnhī", translation: "Did", hindi: "की", etym: "Karana (To do).", note: "Performed." },
             { text: "बहुत", transliteration: "bahuta", translation: "Much/Great", hindi: "बहुत", etym: "Skt: Bahu.", note: "Extensive." },
             { text: "बड़ाई", transliteration: "barāī", translation: "Praise", hindi: "प्रशंसा", etym: "Vad (To speak/exalt).", note: "Extolling virtues." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "तुम", transliteration: "tuma", translation: "You", hindi: "तुम", etym: "Yushmad.", note: "-" },
             { text: "मम", transliteration: "mama", translation: "My", hindi: "मेरे", etym: "Skt: Mama.", note: "Possessive." },
             { text: "प्रिय", transliteration: "priya", translation: "Dear/Beloved", hindi: "प्यारे", etym: "Skt: Priya.", note: "Close to the heart." },
@@ -529,15 +533,17 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 12,
+        verseIndex: 13,
         fullTransliteration: "Sahasa badana tumharo jasa gāvaī | Asa kahi śrīpati kantha lagāvaī ||",
         fullTranslation: "The thousand-headed serpent sings your glory,' saying this, the Lord of Lakshmi embraced you.",
         words: [
             { text: "सहस", transliteration: "Sahasa", translation: "Thousand", hindi: "हजार", etym: "Skt: Sahasra.", note: "Infinite number." },
             { text: "बदन", transliteration: "badana", translation: "Mouths/Faces", hindi: "मुख", etym: "Skt: Vadana.", note: "Refers to Sheshnaga (the Cosmic Serpent)." },
             { text: "तुम्हरो", transliteration: "tumharo", translation: "Your", hindi: "तुम्हारा", etym: "-", note: "-" },
-            { text: "जस", transliteration: "jasa", translation: "Glory/Fame", hindi: "यश", etym: "Skt: Yashas.", note: "Reputation." },
+            { text: "जश", transliteration: "jaśa", translation: "Glory/Fame", hindi: "यश", etym: "Skt: Yashas.", note: "Reputation." },
             { text: "गावैं", transliteration: "gāvaī", translation: "Sing", hindi: "गाते हैं", etym: "Gai (To sing).", note: "Chant praises." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "अस", transliteration: "asa", translation: "Thus/This", hindi: "ऐसा", etym: "-", note: "-" },
             { text: "कहि", transliteration: "kahi", translation: "Saying", hindi: "कहकर", etym: "Kath (To speak).", note: "-" },
             { text: "श्रीपति", transliteration: "śrīpati", translation: "Lord of Lakshmi", hindi: "लक्ष्मीपति (राम/विष्णु)", etym: "Sri (Lakshmi) + Pati (Husband).", note: "Lord Vishnu/Rama." },
@@ -547,13 +553,15 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 13,
+        verseIndex: 14,
         fullTransliteration: "Sanakādika brahmādi munīsā | Nārada śārada sahita ahīsā ||",
         fullTranslation: "Sanaka and the sages, Brahma, gods, Narada, Saraswati, and the King of Serpents...",
         words: [
             { text: "सनकादिक", transliteration: "Sanakādika", translation: "Sanaka etc.", hindi: "सनक आदि", etym: "Sanaka + Adi (Etc).", note: "The four mind-born sons of Brahma (Sanaka, Sanandana, Sanatana, Sanatkumara)." },
             { text: "ब्रह्मादि", transliteration: "brahmādi", translation: "Brahma etc.", hindi: "ब्रह्मा आदि", etym: "Brahma (Creator) + Adi.", note: "The creator god and others." },
             { text: "मुनीसा", transliteration: "munīsā", translation: "Great Sages", hindi: "मुनीश / ऋषियों के ईश", etym: "Muni (Sage) + Isa (Lord).", note: "Chief among sages." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "नारद", transliteration: "Nārada", translation: "Narada", hindi: "नारद मुनि", etym: "Proper Noun.", note: "The celestial sage/messenger." },
             { text: "सारद", transliteration: "śārada", translation: "Saraswati", hindi: "सरस्वती", etym: "Sarada.", note: "Goddess of wisdom/speech." },
             { text: "सहित", transliteration: "sahita", translation: "With/Along with", hindi: "सहित", etym: "Skt: Sahita.", note: "Accompanied by." },
@@ -562,15 +570,17 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 14,
+        verseIndex: 15,
         fullTransliteration: "Yama kubera digapāla jahā te | Kabi kobida kahi sake kahā te ||",
         fullTranslation: "Yama, Kubera, and the guardians of directions; how can poets and scholars describe your glory?",
         words: [
-            { text: "जम", transliteration: "Yama", translation: "Yama", hindi: "यमराज", etym: "Proper Noun.", note: "God of Death." },
+            { text: "यम", transliteration: "Yama", translation: "Yama", hindi: "यमराज", etym: "Proper Noun.", note: "God of Death." },
             { text: "कुबेर", transliteration: "kubera", translation: "Kubera", hindi: "कुबेर", etym: "Proper Noun.", note: "God of Wealth." },
             { text: "दिगपाल", transliteration: "digapāla", translation: "Guardians of Directions", hindi: "दिशाओं के रक्षक", etym: "Dik (Direction) + Pala (Protector).", note: "The 8 or 10 guardians of the cardinal points." },
             { text: "जहाँ", transliteration: "jahā", translation: "Where", hindi: "जहाँ", etym: "-", note: "Referencing their realms." },
             { text: "ते", transliteration: "te", translation: "From/They", hindi: "वे", etym: "-", note: "-" },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "कबि", transliteration: "kabi", translation: "Poets", hindi: "कवि", etym: "Skt: Kavi.", note: "Those with insight." },
             { text: "कोबिद", transliteration: "kobida", translation: "Scholars/Pandits", hindi: "विद्वान", etym: "Skt: Kovida.", note: "Learned ones." },
             { text: "कहि", transliteration: "kahi", translation: "Tell/Describe", hindi: "कह", etym: "-", note: "-" },
@@ -581,14 +591,16 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 15,
+        verseIndex: 16,
         fullTransliteration: "Tuma upakāra sugrīvahi kīnhā | Rāma milāya rāja pada dīnhā ||",
         fullTranslation: "You did a great service to Sugriva, by introducing him to Rama and giving him the kingdom.",
         words: [
             { text: "तुम", transliteration: "Tuma", translation: "You", hindi: "तुमने", etym: "-", note: "-" },
             { text: "उपकार", transliteration: "upakāra", translation: "Favor/Service", hindi: "भलाई / उपकार", etym: "Upa (Near/Under) + Kara (Doing).", note: "Helpful action." },
-            { text: "सुग्रीवहि", transliteration: "sugrīvahi", translation: "To Sugriva", hindi: "सुग्रीव पर", etym: "Su (Good) + Griva (Neck).", note: "The Monkey King." },
+            { text: "सुग्रीवहिं", transliteration: "sugrīvahi", translation: "To Sugriva", hindi: "सुग्रीव पर", etym: "Su (Good) + Griva (Neck).", note: "The Monkey King." },
             { text: "कीन्हा", transliteration: "kīnhā", translation: "Did", hindi: "किया", etym: "-", note: "-" },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "राम", transliteration: "Rāma", translation: "Rama", hindi: "राम", etym: "-", note: "-" },
             { text: "मिलाय", transliteration: "milāya", translation: "United/Introduced", hindi: "मिलवा कर", etym: "Mil (To meet).", note: "Arranged the alliance." },
             { text: "राज", transliteration: "rāja", translation: "Royal/Kingdom", hindi: "राज्य", etym: "Rajan.", note: "Kingship." },
@@ -598,7 +610,7 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 16,
+        verseIndex: 17,
         fullTransliteration: "Tumharo mantra bibhīshana mānā | Lankesvara bhaye saba jaga jānā ||",
         fullTranslation: "Vibhishana heeded your counsel and became the Lord of Lanka, as the whole world knows.",
         words: [
@@ -606,8 +618,10 @@
             { text: "मंत्र", transliteration: "mantra", translation: "Advice/Counsel", hindi: "सलाह", etym: "Skt: Mantra (Thought/Prayer).", note: "Spiritual or strategic advice." },
             { text: "बिभीषन", transliteration: "bibhīshana", translation: "Vibhishana", hindi: "विभीषण", etym: "Proper Noun.", note: "Ravana's righteous brother." },
             { text: "माना", transliteration: "mānā", translation: "Accepted", hindi: "माना", etym: "Man (To think/agree).", note: "Heeded." },
-            { text: "लंकेस्वर", transliteration: "Lankesvara", translation: "Lord of Lanka", hindi: "लंकापति", etym: "Lanka + Ishwara (Lord).", note: "King of Lanka." },
-            { text: "भए", transliteration: "bhaye", translation: "Became", hindi: "बने", etym: "Bhu (To be).", note: "-" },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
+            { text: "लंकेश्वर", transliteration: "Lankesvara", translation: "Lord of Lanka", hindi: "लंकापति", etym: "Lanka + Ishwara (Lord).", note: "King of Lanka." },
+            { text: "भये", transliteration: "bhaye", translation: "Became", hindi: "बने", etym: "Bhu (To be).", note: "-" },
             { text: "सब", transliteration: "saba", translation: "All", hindi: "सारा", etym: "Skt: Sarva.", note: "-" },
             { text: "जग", transliteration: "jaga", translation: "World", hindi: "जगत", etym: "Jagat.", note: "-" },
             { text: "जाना", transliteration: "jānā", translation: "Knows", hindi: "जानता है", etym: "Jna (To know).", note: "Is famous worldwide." }
@@ -615,15 +629,17 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 17,
+        verseIndex: 18,
         fullTransliteration: "Yuga sahasra yojana para bhānū | Līlyo tāhi madhura phala jānū ||",
         fullTranslation: "The sun is thousands of miles away; you swallowed it thinking it to be a sweet fruit.",
         words: [
-            { text: "जुग", transliteration: "Yuga", translation: "Age/Era", hindi: "युग (संख्या)", etym: "Yuga = 12,000 divine years.", note: "Here used as a unit of calculation." },
+            { text: "युग", transliteration: "Yuga", translation: "Age/Era", hindi: "युग (संख्या)", etym: "Yuga = 12,000 divine years.", note: "Here used as a unit of calculation." },
             { text: "सहस्र", transliteration: "sahasra", translation: "Thousand", hindi: "हजार", etym: "1000.", note: "-" },
-            { text: "जोजन", transliteration: "yojana", translation: "Yojana", hindi: "योजन", etym: "Measure of distance (approx 8 miles).", note: "1 Yuga x 1000 x 1 Yojana = Distance to Sun." },
+            { text: "योजन", transliteration: "yojana", translation: "Yojana", hindi: "योजन", etym: "Measure of distance (approx 8 miles).", note: "1 Yuga x 1000 x 1 Yojana = Distance to Sun." },
             { text: "पर", transliteration: "para", translation: "At/On", hindi: "पर", etym: "-", note: "Located at." },
             { text: "भानू", transliteration: "bhānū", translation: "Sun", hindi: "सूर्य", etym: "Bhanu (Light/Ray).", note: "The Sun God." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "लील्यो", transliteration: "līlyo", translation: "Swallowed", hindi: "निगल लिया", etym: "Skt: Lil (To play/swallow).", note: "As a child, Hanuman leapt and ate the sun." },
             { text: "ताहि", transliteration: "tāhi", translation: "It", hindi: "उसे", etym: "-", note: "Refers to the sun." },
             { text: "मधुर", transliteration: "madhura", translation: "Sweet", hindi: "मीठा", etym: "Skt: Madhura.", note: "Delectable." },
@@ -633,7 +649,7 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 18,
+        verseIndex: 19,
         fullTransliteration: "Prabhu mudrikā meli mukha māhī | Jaladhi lānghi gaye acharaja nāhī ||",
         fullTranslation: "Holding the Lord's ring in your mouth, you crossed the ocean; it is no wonder.",
         words: [
@@ -642,8 +658,10 @@
             { text: "मेलि", transliteration: "meli", translation: "Kept/Placed", hindi: "रखकर", etym: "-", note: "Held securely." },
             { text: "मुख", transliteration: "mukha", translation: "Mouth", hindi: "मुँह", etym: "Skt: Mukha.", note: "In the mouth." },
             { text: "माहीं", transliteration: "māhī", translation: "In/Inside", hindi: "में", etym: "Madhye (Middle).", note: "-" },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "जलधि", transliteration: "jaladhi", translation: "Ocean", hindi: "समुद्र", etym: "Jala (Water) + Dhi (Container).", note: "The vast sea." },
-            { text: "लाँघि", transliteration: "lānghi", translation: "Leaped/Crossed", hindi: "लाँघ", etym: "Langh (To leap).", note: "Jumped over." },
+            { text: "लांघि", transliteration: "lānghi", translation: "Leaped/Crossed", hindi: "लाँघ", etym: "Langh (To leap).", note: "Jumped over." },
             { text: "गये", transliteration: "gaye", translation: "Went", hindi: "गए", etym: "Gam (Go).", note: "-" },
             { text: "अचरज", transliteration: "acharaja", translation: "Wonder/Surprise", hindi: "आश्चर्य", etym: "Skt: Ashcharya.", note: "Miracle." },
             { text: "नाहीं", transliteration: "nāhī", translation: "Not", hindi: "नहीं", etym: "Na.", note: "It is not surprising given your power." }
@@ -651,7 +669,7 @@
     },
     {
         type: "Chaupai",
-        verseIndex: 19,
+        verseIndex: 20,
         fullTransliteration: "Durgama kāja jagata ke jete | Sugama anugraha tumhare tete ||",
         fullTranslation: "Whatever difficult tasks exist in the world, they become easy by your grace.",
         words: [
@@ -660,15 +678,18 @@
             { text: "जगत", transliteration: "jagata", translation: "World", hindi: "संसार", etym: "Jagat.", note: "In this existence." },
             { text: "के", transliteration: "ke", translation: "Of", hindi: "के", etym: "-", note: "-" },
             { text: "जेते", transliteration: "jete", translation: "Whichever/As many", hindi: "जितने", etym: "Yat.", note: "However many exist." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "सुगम", transliteration: "sugama", translation: "Easy", hindi: "आसान", etym: "Su (Good) + Gam (Go).", note: "Accessible/Easy." },
             { text: "अनुग्रह", transliteration: "anugraha", translation: "Grace", hindi: "कृपा", etym: "Anu (After) + Grah (Seize/Accept).", note: "Divine favor/blessing." },
             { text: "तुम्हारे", transliteration: "tumhare", translation: "Your", hindi: "तुम्हारी", etym: "-", note: "-" },
             { text: "तेते", transliteration: "tete", translation: "That many", hindi: "वे सब", etym: "Tat.", note: "They all become easy." }
         ]
     },
+    // to here, next 21
     {
         type: "Chaupai",
-        verseIndex: 20,
+        verseIndex: 21,
         fullTransliteration: "Rāma duāre tuma rakhavāre | Hota na āgyā binu paisāre ||",
         fullTranslation: "You are the guardian at Rama's door; no one enters without your permission.",
         words: [
