some further corrections, small updates

--- a/chalisa6.html
+++ b/chalisa6.html
@@ -402,6 +402,8 @@
             { text: "सुवन", transliteration: "suvana", translation: "Son/Incarnation", hindi: "पुत्र / अवतार", etym: "Skt: Suvana.", note: "Offspring or manifestation." },
             { text: "केसरी", transliteration: "keśarī", translation: "Kesari", hindi: "केसरी", etym: "Proper Noun.", note: "Hanuman's earthly father, the Monkey King." },
             { text: "नंदन", transliteration: "nandana", translation: "Son/Joy", hindi: "पुत्र / आनंद", etym: "Nand (Joy).", note: "Son who brings delight." },
+            { text: "|", transliteration: "|"},
+            { text: "<br>", transliteration: "<br>"},
             { text: "तेज", transliteration: "teja", translation: "Radiance/Glory", hindi: "तेज / आभा", etym: "Skt: Tejas.", note: "Spiritual and physical splendor." },
             { text: "प्रताप", transliteration: "pratāpa", translation: "Majesty/Valor", hindi: "प्रताप / वीरता", etym: "Pra + Tapa (Heat).", note: "Power and influence." },
             { text: "महा", transliteration: "mahā", translation: "Great", hindi: "महान", etym: "Skt: Maha.", note: "-" },
