--- a/chalisa7.html
+++ b/chalisa7.html
@@ -206,7 +206,7 @@
 @media (max-width: 768px) {
     body {
         /* 1. Switch to the TALL image */
-        background-image: url('hanuman-bg-mobile.png');
+        background-image: url('hanuman-bg-mobile.jpeg');
 
         /* 2. Change alignment */
         /* Anchor image to the top-center so Hanuman's face is never cut off */
