--- a/chalisa7.html
+++ b/chalisa7.html
@@ -214,7 +214,7 @@ body {
 @media (max-width: 768px) {
     /* Switch image on the Layer, NOT the body */
     #background-layer {
-        background-image: url('hanuman-bg-mobile.png');
+        background-image: url('hanuman-bg-mobile.jpg');
         background-position: center top; /* Focus on the face */
     }
     
