--- a/chalisa7.html
+++ b/chalisa7.html
@@ -231,7 +231,7 @@ body {
 @media (max-width: 768px) {
     #background-layer {
         /* 3. MOBILE IMAGE: Check if this file is actually .jpg in your folder! */
-        background-image: url('hanuman-mobile.png');
+        background-image: url('hanuman-bg-mobile.jpg');
         
         background-position: top center;
     }
