small desktop image

--- a/chalisa7.html
+++ b/chalisa7.html
@@ -236,7 +236,7 @@ body {
     background-color: var(--primary); 
 
     /* 2. IMAGE: Check your file extension! (.jpg or .png?) */
-    background-image: url('hanuman-bg.png'); 
+    background-image: url('hanuman-bg.jpg'); 
     
     background-size: cover;
     background-position: center;
